--- a/fly-module-system/fly-module-system-biz/src/test-integration/resources/application-integration-test.yaml
+++ b/fly-module-system/fly-module-system-biz/src/test-integration/resources/application-integration-test.yaml
@@ -45,13 +45,13 @@ spring:
       primary: master
       datasource:
         master:
-          name: ruoyi-vue-pro
+          name: fly
           url: jdbc:mysql://127.0.0.1:3306/${spring.datasource.dynamic.datasource.master.name}?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=CTT
           driver-class-name: com.mysql.jdbc.Driver
           username: root
           password: 123456
         slave: # 模拟从库，可根据自己需要修改
-          name: ruoyi-vue-pro
+          name: fly
           url: jdbc:mysql://127.0.0.1:3306/${spring.datasource.dynamic.datasource.slave.name}?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=CTT
           driver-class-name: com.mysql.jdbc.Driver
           username: root
